# riscv-simulator

./: .gitignore  CMakeLists.txt  README.md  debug.txt
src/: cache_simulator.cpp  global.hpp  main.cpp  riscv_simulator.cpp
src/cache/: cache.cpp  cache.hpp  config.hpp
src/cpu/: cpu.cpp  cpu.hpp
src/elfio/: elf_types.hpp  elfio.hpp  elfio_section.hpp
src/isa/: riscv.cpp  riscv.hpp
src/memory/: memory.cpp  memory.hpp  vm.cpp  vm.hpp  vma.cpp
src/riscv/: insttab.cpp  riscv.cpp  riscv.hpp
src/simulator/: sequential.cpp  simulator.cpp  simulator.hpp  syscall.cpp
src/simulator/arch/: base.cpp  base.hpp  multi.cpp  multi.hpp  pipeline.cpp  pipeline.hpp  single.cpp  single.hpp
test/: add.asm  add.c  add_int.asm  add_int.c  test.py  tmp_exec
test/basic/: add.out  hello_world.out
test/class/: 1.c  10.c  2.c  2.out  3.c  3.out  4.c  5.c  6.c  7.c  8.c  8.out  9.c  9.out
test/functional/: 094_long_array.c  094_long_array.out
test/functional_test/: add.in
test/includes/: genio.c  genio.h  testio.c  testio.h
trace/: associativity_trace1.csv  associativity_trace2.csv  block_size_trace1.csv  block_size_trace2.csv  plot.py  write_policy_trace1.csv  write_policy_trace2.csv
